fix: cropper btn 스타일

--- a/src/pages/member/member.css
+++ b/src/pages/member/member.css
@@ -286,6 +286,7 @@ div.cropper-area
     background-color: #98AFCA;
     color: white;
     float: right;
+    border:none;
 }
 
 .acc-header{
