--- a/src/pages/studyroom/studyroom.css
+++ b/src/pages/studyroom/studyroom.css
@@ -425,6 +425,7 @@ div.room-cropper-area div.btn-area
     background-color: #98AFCA;
     color: white;
     float: right;
+    border:none;
 }
 
 
